# markdown-to-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: guide-template-latex.md
examples/: metadata.yaml  sample copy.md  sample.md
examples/showcase/: code-blocks.md  lists.md  mermaid.md  plantuml.md  tables.md  text-and-media.md  titles.md
src/markdown_pdf/: __init__.py  cli.py  config.py  html_styles.py  latex_engine.py  latex_template.py  latex_utils.py  markdown_preprocessor.py  mermaid.py  pandoc.py  pipeline.py  plantuml.py  remote_images.py  versioning.py
src/markdown_pdf/templates/: cover.tex.j2  document.tex.j2  toc.tex.j2
tests/: test_cli.py  test_html_styles.py  test_markdown_preprocessor.py  test_pipeline.py
